Adding some new features
* Move to ready command added to minion cards in torpor
* Remove from game command added to cards in ready / ashheap
* Quick command for VP/pool gain for oust added
* More pool options added to Quick Command
* Admin option for ending turn added provided admin is not playing in the game #37